--- a/css/index.css
+++ b/css/index.css
@@ -97,12 +97,14 @@ form > button {
     height: 641px;
     border-radius: 30px;
 
-    padding: 15px;
+    padding: 30px 15px 30px 15px;
     display: flex;
     flex-direction: row-reverse;
   }
 
-
+ h2{
+    font-size: 56px;
+ }
   main > :first-child > img {
     height: 100%;
     
@@ -112,6 +114,9 @@ form > button {
     padding: 30px;
   }
 
+  .mainContent > div>div{
+    height: auto;
+  }
   form > button:hover {
     background: linear-gradient(to bottom, #FF6A3A, #FF527B);
     box-shadow: 0px 6px 8px rgba(255, 82, 123, 0.5);
